--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <main>
         <header id="main-section-head">
-            <div>
-                <select name="Home">
-                    <option value="HOME">
+            <div id="home-part">
+                <select name="Home" id="home-part">
+                    <option>
                         <h2>HOME</h2>
                     </option>
                     <option>
@@ -50,45 +50,65 @@
                             <option><a href="#">Shop__4 Items per Row</a></option>
                             <option><a href="#">Shop__3 Items per Row</a></option>
                             <option><a href="#">Shop__2 Items per Row</a></option>
-                        </select>
-                    </div>
-                    <div class="section-two">
-                        <select>
-                            <option><a href="#"><h2>SHOP__PAGES</h2></a></option>
-                            <option><a href="#">Shopping Cart</a></option>
-                            <option><a href="#">Cheakout</a></option>
-                            <option><a href="#">My Account</a></option>
-                            <option><a href="#">Order Traking</a></option>
-                        </select>
-                    </div>
-                </div>
-                <div id="section-right">
-                    <div class="section-three">
-                        <select>
-                            <option><a href="#"><h2>PRODUCT PAGE STYLES</h2></a></option>
-                            <option><a href="#">Product Layout</a></option>
-                            <option><a href="#">Product Layout</a></option>
-                            <option><a href="#">Product Layout</a></option>
-                            <option><a href="#">Product Layout</a></option>
-                            <option><a href="#">Extended Descriptions</a></option>
-                            <option><a href="#">Product Videos</a></option>
-                        </select>
-                    </div>
-                    <div class="section-four">
-                        <select>
-                            <option><a href="#"><h2>PRODUCT TYPES</h2></a></option>
-                            <option><a href="#">Product__ Simple</a></option>
-                            <option><a href="#">Product__ Variables (Colors/Size/etc.)</a></option>
-                            <option><a href="#">Digital Downloads</a></option>
-                            <option><a href="#">External / Affiliate</a></option>
-                            <option><a href="#">On Sale</a></option>
-                            <option><a href="#">out of Stock</a></option>
+                            <div class="section-two">
+                                <option><a href="#">
+                                        <h2>SHOP__PAGES</h2>
+                                    </a></option>
+                                <option><a href="#">Shopping Cart</a></option>
+                                <option><a href="#">Cheakout</a></option>
+                                <option><a href="#">My Account</a></option>
+                                <option><a href="#">Order Traking</a></option>
+                            </div>
+                            <div id="section-right">
+                                <div class="section-three">
+                                    <option><a href="#">
+                                            <h2>PRODUCT PAGE STYLES</h2>
+                                        </a></option>
+                                    <option><a href="#">Product Layout</a></option>
+                                    <option><a href="#">Product Layout</a></option>
+                                    <option><a href="#">Product Layout</a></option>
+                                    <option><a href="#">Product Layout</a></option>
+                                    <option><a href="#">Extended Descriptions</a></option>
+                                    <option><a href="#">Product Videos</a></option>
+                                </div>
+                                <div class="section-four">
+                                    <option><a href="#">
+                                            <h2>PRODUCT TYPES</h2>
+                                        </a></option>
+                                    <option><a href="#">Product__ Simple</a></option>
+                                    <option><a href="#">Product__ Variables (Colors/Size/etc.)</a></option>
+                                    <option><a href="#">Digital Downloads</a></option>
+                                    <option><a href="#">External / Affiliate</a></option>
+                                    <option><a href="#">On Sale</a></option>
+                                    <option><a href="#">out of Stock</a></option>
+                                </div>
+                            </div>
                         </select>
                     </div>
                 </div>
             </div>
-            <div>
-
+            <div id="portfolio">
+                <select>
+                    <option><a href="#">
+                            <h2>THE PORTFOLIO</h2>
+                        </a></option>
+                    <div>
+                        <option><a href="#">GRID EXAMPLES</a></option>
+                        <option><a href="#">Masonry Style Grid</a></option>
+                        <option><a href="#">Masonry Style Grid</a></option>
+                        <option><a href="#">Masonry Style Grid</a></option>
+                        <option><a href="#">Classic Grid __ 3 Equal Boxes</a></option>
+                        <option><a href="#">Classic Grid __ 4 Equal Boxes</a></option>
+                        <option><a href="#">Classic Grid __ 5 Equal Boxes</a></option>
+                    </div>
+                    <div>
+                        <option><a href="#">PROJECT EXAMPLES</a></option>
+                        <option><a href="#">Project Exaples 1</a></option>
+                        <option><a href="#">Project Exaples 2</a></option>
+                        <option><a href="#">Project Exaples 3</a></option>
+                        <option><a href="#">Project Exaples 4</a></option>
+                    </div>
+                </select>
             </div>
         </header>
     </main>
